--- a/argocd/operands/all-operands.yaml
+++ b/argocd/operands/all-operands.yaml
@@ -14,18 +14,18 @@ spec:
           namespace: cp4i
           sync-wave: "300"
           target-revision: HEAD
-        - name: appconnect
-          namespace: cp4i
-          sync-wave: "300"
-          target-revision: HEAD
-        - name: eventstreams
-          namespace: cp4i
-          sync-wave: "300"
-          target-revision: HEAD
-        - name: platformnavigator
-          namespace: cp4i
-          sync-wave: "200"
-          target-revision: HEAD
+        # - name: appconnect
+        #   namespace: cp4i
+        #   sync-wave: "300"
+        #   target-revision: HEAD
+        # - name: eventstreams
+        #   namespace: cp4i
+        #   sync-wave: "300"
+        #   target-revision: HEAD
+        # - name: platformnavigator
+        #   namespace: cp4i
+        #   sync-wave: "200"
+        #   target-revision: HEAD
         - name: openshift-logging
           namespace: openshift-logging
           sync-wave: "200"
@@ -50,7 +50,7 @@ spec:
       source:
         repoURL: https://github.com/vnordin/hypersonic-lightweight-cp4i.git
         targetRevision: '{{target-revision}}'
-        path: 'envs/ibm-classic/nonprod/{{name}}/'
+        path: 'envs/azure/nonprod/{{name}}/'
       destination:
         server: 'https://kubernetes.default.svc'
         namespace: '{{namespace}}'
