--- a/argocd/operators/all-operators.yaml
+++ b/argocd/operators/all-operators.yaml
@@ -6,12 +6,12 @@ spec:
   generators:
   - list:
       elements:
-        - name: apiconnect
-          namespace: openshift-operators
-        - name: appconnect
-          namespace: openshift-operators
-        - name: eventstreams
-          namespace: openshift-operators
+        #- name: apiconnect
+        #  namespace: openshift-operators
+        # - name: appconnect
+        #   namespace: openshift-operators
+        # - name: eventstreams
+        #   namespace: openshift-operators
         - name: mq
           namespace: openshift-operators
         - name: platformnavigator
